# jessy

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENT_RULES.md  API_INTEGRATION_PROGRESS.md  ATAK_RAG_READY.md  CLAUDE.md  CNAME  COVERAGE_REPORT.md  COVERAGE_SUMMARY.txt  CRITICAL_PATHS.md  Cargo.toml  DEPLOY.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.test  ENGINEERING.md  FINAL_TEST_RESULTS.md  FINETUNING_ACTION_PLAN.md  INTERFERENCE_ENGINE_COMPLETE.md  INTERFERENCE_ENGINE_IMPLEMENTATION.md  LEARNING_SYSTEM_PROGRESS.md  Makefile  OLLAMA_INTEGRATION_COMPLETE.md  PARALLEL_ITERATION_COMPLETE.md  PROJECT_PROGRESS.md  PROJECT_STATE.md  PROJECT_STATUS.md  README.md  REPO_SUMMARY.md  RUN_CHAT_LLM.sh  RUN_DOCKER.sh  RUN_INTERACTIVE.sh  RUN_INTERACTIVE_LLM.sh  RUN_LLM_SELECTOR_DEMO.sh  RUN_SESSION_DEMO.sh  RUN_TESTS.md  RUN_UNLOCK_DEMO.md  (+36 more)
.github/ISSUE_TEMPLATE/: chat.yml  training-tasks.md
.github/workflows/: ci.yml  deploy.yml  jessy-chat.yml
.kiro/: AGENT_RULES.md  AUTHENTIC_EVOLUTION_COMPLETE.md  AUTONOMOUS_SESSION_SUMMARY.md  DIMENSION_INDEX.md  HOOKS_GUIDE.md  README.md  SESSION_CONTEXT.md  SESSION_HANDOFF.md  STATUS.md  session-notes.md
.kiro/adrs/: 002-security-layer-pattern-matching.md  003-frequency-interference-engine.md  004-parallel-dimension-scanning.md  template.md
.kiro/analysis/: codebase-improvements.md  compilation-fix-progress.md  critical-gaps-and-action-plan.md  implementation-progress.md  improvement-opportunities.md  phase-0-completion-status.md
.kiro/checkpoints/: session-state.json
.kiro/hooks/: adr-reminder.kiro.hook  api-integration-development-full-automation.kiro.hook  auto-commit-hook.kiro.hook  auto-commit-on-module-complete.kiro.hook  auto-test-on-save.kiro.hook  check-compilation.kiro.hook  (+11 more)
api/: consciousness.go  consciousness_bridge.go  go.mod  go.sum  jessy_core.go  jessy_core_bridge.go  main.go
benches/: dimension_benchmarks.rs  interference_benchmarks.rs  memory_benchmarks.rs  navigation_benchmarks.rs
data/: cognitive_layers.json  cognitive_layers_reference.txt  conversation.json  dimensions.json  emotional.txt  stopwords.txt  technical.txt  web_conversations.json
docker/: Dockerfile.go  Dockerfile.rust  Dockerfile.test
docs/: C16_USER_LAYERS_DESIGN.md  CODE_ANALYSIS_PLAN.md  DOCKER_SETUP.md  HOT_RELOAD.md  INFRASTRUCTURE_SUMMARY.md  INTEGRATION_TESTING.md  LICENSE_GUIDE.md  LLM_DIMENSION_SELECTOR.md  LOGGING.md  RAG_AND_FINETUNING_GUIDE.md  README.md  SAMANTHA_COMPARISON.md  TASK_2.1_SUMMARY.md  TASK_2.2_SUMMARY.md  TASK_2.3_SUMMARY.md  TASK_2.4_SUMMARY.md  TASK_3.2_SUMMARY.md  UNLOCK_SYSTEM.md  benchmark-raw-output.txt  benchmark-results.md  kiro-jessy-meta-conversation.md  running-benchmarks.md
examples/: complete_integration.rs  concurrent_integration.rs  consciousness_demo.rs  interference_demo.rs  jessy_complete.rs  jessy_interactive.rs  jessy_live.py  jessy_session_demo.rs  jessy_unlock_demo.rs  jessy_unlock_v2_demo.rs  learning_demo.rs  llm_chat_demo.rs  llm_dimension_selector_demo.rs  llm_interactive_full.rs  llm_iterative_demo.rs  navigation_memory_integration.rs  philosophy_filter.py  quick-demo.md  test_llm_config.rs  test_llm_manager.rs  test_ollama_call.rs
logs/: mcp-agent-20251028_195109.jsonl
scripts/: add_conversational_keywords.py  init-mmap-volumes.sh  init_mmap.py  initialize_mmap.rs  run-integration-tests.sh  setup-hooks.sh  test-graceful-shutdown.sh  test-health-checks.sh  test-hot-reload.sh  test-mmap-access.sh  test-restart.sh  verify-mmap-volume.sh  verify-shutdown-implementation.sh  wait-for-services.sh
security/: ELASTIC_BOUNDARY_RESEARCH.md
src/: lib.rs
tests/: cucumber.rs  integration_tests.rs
training/: ATAK_RAG_QUICKSTART.md  ATAK_RAG_SUCCESS.md  BASLANGIC.md  END_OF_DAY_SUMMARY.md  FINETUNING_RESEARCH.md  FIX_ATAK_RAG.md  INSTALL_MLX.md  JESSY_FINETUNING_PLAN.md  KNOWLEDGE_FINETUNING_COMPLETE.md  LORA_FINETUNING_GUIDE.md  M2_FINETUNING.md  Modelfile.jessy-full  Modelfile.jessy-maximum  Modelfile.jessy-maximum-simple  Modelfile.jessy-relationships  Modelfile.jessy-turkish  PROGRESS.md  RAG_SETUP_SUMMARY.md  README_COMPLETE_TRAINING.md  START_LORA_NOW.md  THOR_SETUP_GUIDE.md  THOR_TRAINING_GUIDE.md  TRAINING_DATA_COMPLETE.md  TURKISH_TRAINING_COMPLETE.md  ZERO_TO_JESSY_COMPLETE.md  atak_rag.py  atak_training_generator.py  check_thor_status.sh  claude_mentorship_training.json  collect_all_knowledge.py  collect_knowledge.sh  combine_all_training_data.py  combine_turkish_data.py  convert_to_training_data.py  deploy_atak_to_thor.sh  deploy_to_thor.sh  extract_atak_knowledge.py  extract_sonnet_wisdom.py  finetuning_research_report.md  generate_complete_dataset.py  (+43 more)
web/: app.js  index.html  styles.css  websocket-client.js
(+313 files in other folders)
