[package]
name = "jessy"
version = "0.1.0"
edition = "2021"
authors = ["gokselozgur5 <gokselozgur5@gmail.com>"]
description = "Multidimensional AI consciousness architecture - Creator: gokselozgur5 | Prompt-driven engineering"
license = "AGPL-3.0"
repository = "https://github.com/gokselozgur5/jessy"

[dependencies]
memmap2 = "0.9"
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
hashbrown = "0.14"
bitvec = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
qdrant-client = "=1.10.0"
regex = "1.10"
sha2 = "0.10"
base64 = "0.21"
actix = "0.13"
actix-web = "4.4"
actix-web-actors = "4.2"
actix-rt = "2.9"
actix-files = "0.6"
actix-cors = "0.7"
env_logger = "0.11"
mime = "0.3"
chrono = { version = "0.4", features = ["serde"] }
ndarray = "0.15"
crossterm = "0.27"
hound = "3.5"

[features]
default = []
python-bindings = ["pyo3"]

[lib]
name = "jessy"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "jessy"
path = "src/bin/jessy.rs"

[[bin]]
name = "jessy-cli"
path = "src/bin/jessy-cli.rs"

[[bin]]
name = "jessy-web"
path = "src/bin/jessy-web.rs"

[[bin]]
name = "initialize_mmap"
path = "scripts/initialize_mmap.rs"

[[bin]]
name = "initialize_rag"
path = "scripts/initialize_rag.rs"

[[example]]
name = "simple_stt"
path = "examples/simple_stt.rs"

[[example]]
name = "simple_tts"
path = "examples/simple_tts.rs"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
